# yotta_lead_scoring

./: README.md  activate.sh  pyproject.toml
notebooks/: .gitignore  utilities_eda_num.py  utilities_graph.py  utilities_modele.py
src/: __init__.py
src/application/: main.py  model.py  predict.py  train.py
src/domain/: build_features.py  cleaning.py
src/infrastructure/: make_dataset.py
src/settings/: base.py  column_names.py
