[tool.poetry]
name = "db-jb"
version = "0.1.0"
description = "Yotta_ML-Project-Fall-2020_Dorota-Jerome"
authors = ["Jerome Blin <blinjrm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
